--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "react-native-template-lycl",
+  "name": "@lycl/react-native-template",
   "version": "0.0.1",
   "description": "Team Lycl React Native Template",
-  "repository": "git@github.com:teamlycl/react-native-template-lycl.git",
+  "repository": "https://github.com/teamlycl/react-native-template-lycl.git",
   "author": "yozi <j16412000kr@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
 }
