--- a/template/android/app/build.gradle
+++ b/template/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
 
 import com.android.build.OutputFile
 
@@ -96,7 +97,7 @@ def enableSeparateBuildPerCPUArchitecture = false
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore.
@@ -134,9 +135,10 @@ android {
         applicationId "com.template"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode getIncrementingVersionCode()
         versionName "1.0"
     }
+    
     splits {
         abi {
             reset()
@@ -146,6 +148,13 @@ android {
         }
     }
     signingConfigs {
+         release {
+            storeFile project.hasProperty('KEY') ? file(project.KEY) : 'default'
+            storePassword project.hasProperty('STORE_PASSWORD') ? project.STORE_PASSWORD : 'default'
+            keyAlias project.hasProperty('KEY_ALIAS') ? project.KEY_ALIAS : 'default'
+            keyPassword project.hasProperty('KEY_PASSWORD') ? project.KEY_PASSWORD : 'default'
+        }
+
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -160,7 +169,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -210,6 +219,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -217,6 +229,45 @@ dependencies {
 task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
+}
+
+//can call this like `./gradlew incrementVersionCode build`
+task incrementVersionCode {
+    description = "Increments the version code in the version.properties file"
+
+    doLast {
+        File versionPropsFile = file('version.properties')
+
+        if (versionPropsFile.canRead()) {
+            def Properties versionProps = new Properties()
+
+            versionProps.load(new FileInputStream(versionPropsFile))
+
+            def code = versionProps['VERSION_CODE'].toInteger() + 1
+
+            versionProps['VERSION_CODE'] = code.toString()
+            versionProps.store(versionPropsFile.newWriter(), null)
+            println "VERSION_CODE incremented to "+code
+        } else {
+            throw new GradleException("Could not read version.properties!")
+        }
+    }
+}
+
+//can call this from your android DSL
+int getIncrementingVersionCode() {
+    def versionPropsFile = file('version.properties')
+
+    if (versionPropsFile.canRead()) {
+        def Properties versionProps = new Properties()
+
+        versionProps.load(new FileInputStream(versionPropsFile))
+
+        def code = versionProps['VERSION_CODE'].toInteger()
+        return code
+    } else {
+        throw new GradleException("Could not read version.properties!")
+    }
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
