--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -1,8 +1,8 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
-
+platform :ios, '11.0'
+pod 'Firebase/Analytics'
 target 'template' do
   config = use_native_modules!
 
@@ -24,6 +24,11 @@ target 'template' do
   use_flipper!()
 
   post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+      end
+    end
     react_native_post_install(installer)
   end
 end
