--- a/template/.github/workflows/android-bata.yml
+++ b/template/.github/workflows/android-bata.yml
@@ -1,6 +1,6 @@
 name: android beta deploy
 
-on: 
+on:
   workflow_dispatch:
     inputs:
       app_target:
@@ -13,11 +13,11 @@ on:
         default: 'bugfix'
 
 env:
-    NODE_VERSION: 16.x
-    GIT_AUTHORIZATION: ${{ secrets.GH_TOKEN }}
-    CACHE_GRADLE_WRAPPER: gradle-wrapper
-    CACHE_GRADLE_CACHES: gradle-caches
-    CACHE_NODE_MODULE: node_modules@v1
+  NODE_VERSION: 16.x
+  GIT_AUTHORIZATION: ${{ secrets.GH_TOKEN }}
+  CACHE_GRADLE_WRAPPER: gradle-wrapper
+  CACHE_GRADLE_CACHES: gradle-caches
+  CACHE_NODE_MODULE: node_modules@v1
 
 jobs:
   init:
@@ -38,7 +38,7 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-${{ env.CACHE_NODE_MODULE }}-${{ hashFiles('**/package-lock.json') }}
-            
+
       - name: Install packages
         if: steps.node-cache.outputs.cache-hit != 'true'
         run: npm ci
@@ -47,13 +47,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [init]
 
-    env: 
+    env:
       ANDROID_KEY_FILE_NAME: lycl.keystore
       ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_ALIAS }}
       ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_PASSWORD }}
       FIREBASE_APP: ${{ secrets.FIREBASE_APP_ID }}
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -63,7 +63,7 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-${{ env.CACHE_NODE_MODULE }}-${{ hashFiles('**/package-lock.json') }}
-          
+
       - name: Cache Gradle Wrapper
         uses: actions/cache@v2
         with:
@@ -83,18 +83,26 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "2.7.3"
-          working-directory: "android"
+          ruby-version: '2.7.3'
+          working-directory: 'android'
           bundler-cache: true
 
       - name: Beta deploy using Fastlane
-        env: 
+        env:
           RELEASE_NOTE: ${{ github.event.inputs.release_notes }}
           FIREBASE_GROUP: ${{ github.event.inputs.app_target }}
         run: |
+          sudo apt-get update
+          sudo apt-get install xmlstarlet
           cd android
+          xmlstarlet edit --inplace --update "//resources/string[@name='CodePushDeploymentKey']" --value ${{ secrets.CODEPUSH_DEPLOYMENT_ANDROID_STAGING_KEY }} app/src/main/res/values/strings.xml
           bundle exec fastlane beta
-      
+
+      - name: Reset Codepush Deployment Key
+        run: |
+          cd android
+          xmlstarlet edit --inplace --update "//resources/string[@name='CodePushDeploymentKey']" --value '' app/src/main/res/values/strings.xml
+
       - name: build version bump
         uses: actions-go/push@master
         with:
