--- a/template/.github/workflows/ios.yml
+++ b/template/.github/workflows/ios.yml
@@ -84,14 +84,13 @@ jobs:
           bundle exec pod install
           plutil -replace CodePushDeploymentKey -string ${{ secrets.CODEPUSH_DEPLOYMENT_IOS_STAGING_KEY }} ${{ env.APP_NAME }}/Info.plist
 
-      - name: Beta deploy using Fastlane, Reset Codepush Deployment Key
+      - name: Beta deploy using Fastlane
         env:
           RELEASE_NOTE: ${{ github.event.inputs.release_notes }}
           FIREBASE_GROUP: ${{ github.event.inputs.app_target }}
         run: |
           cd ios
           bundle exec fastlane beta
-          plutil -replace CodePushDeploymentKey -string '' ${{ env.APP_NAME }}/Info.plist
 
       - name: build version bump
         uses: actions-go/push@master
