--- a/template/.github/workflows/android-code-push.yml
+++ b/template/.github/workflows/android-code-push.yml
@@ -12,7 +12,7 @@ env:
   NODE_VERSION: 16.x
   GIT_AUTHORIZATION: ${{ secrets.GH_TOKEN }}
   CACHE_NODE_MODULE: node_modules@v1
-  DEPLOYMENT_NAME: dev-lycl/template-android
+  DEPLOYMENT_NAME: dev-lycl/template-android # appcenter에 등록된 username/appname
 
 jobs:
   init:
