--- a/template/.github/workflows/android-codepush-beta.yml
+++ b/template/.github/workflows/android-codepush-beta.yml
@@ -12,7 +12,7 @@ env:
   NODE_VERSION: 16.x
   GIT_AUTHORIZATION: ${{ secrets.GH_TOKEN }}
   CACHE_NODE_MODULE: node_modules@v1
-  DEPLOYMENT_NAME: dev-lycl/template-android # appcenter에 등록된 username/appname
+  DEPLOYMENT_NAME: ##TYPE_PLEASE##  appcenter에 등록된 username/appname ex: dev-lycl/template-android
 
 jobs:
   init:
