Feature/multiple environment (#5)
* iOS 스키마 분리

* ios 스키마 분리

* pod bugfixed

* ios 환경 분리

--- a/template/ios/dev-Info.plist
+++ b/template/ios/dev-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>ko_KR</string>
 	<key>CFBundleDisplayName</key>
-	<string>template</string>
+	<string>template (dev)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -33,13 +33,6 @@
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>codepush.appcenter.ms</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-			</dict>
-		</dict>
-		<dict>
-			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
