--- a/template/package.json
+++ b/template/package.json
@@ -10,23 +10,23 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react": "^17.0.2",
+    "react-native": "^0.66.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.64.5",
-    "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/react-native": "^0.66.6",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^27.4.2",
+    "eslint": "^8.3.0",
+    "jest": "^27.4.3",
+    "metro-react-native-babel-preset": "^0.66.2",
     "react-native-code-push": "^7.0.1",
-    "react-test-renderer": "17.0.1",
-    "typescript": "^3.8.3"
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.5.2"
   },
   "resolutions": {
     "@types/react": "^17"
